Closed Bug 668748 Opened 13 years ago Closed 13 years ago

IonMonkey: Assertion failure: header_->id() < header_->getPredecessor(i)->id(), at LICM.cpp:99

Categories

(Core :: JavaScript Engine, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: adrake, Unassigned)

References

Details

Attachments

(1 file)

Attached file Test case
The attached test case generates the assertion failure on 32 and 64-bit IonMonkey in the LICM pass:

Assertion failure: header_->id() < header_->getPredecessor(i)->id(), at /home/adrake/moz/ionmonkey/js/src/ion/LICM.cpp:99
Aborted (core dumped)
Blocks: 664547
Fixed, that "less than" needed to be a "less than or equal to"

http://hg.mozilla.org/users/danderson_mozilla.com/ionmonkey/rev/3efeb6758ebc
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: