fixed assertion failure from bug https://bugzilla.mozilla.org/show_bug.cgi?id=668748